[gd_scene load_steps=6 format=3 uid="uid://duukuve0kie1d"]

[ext_resource type="Script" path="res://itens/item_base.gd" id="1_tigte"]
[ext_resource type="Texture2D" uid="uid://dra2mk7t6ek18" path="res://vendor/tinyDungeon/tilemap.png" id="2_2tuym"]

[sub_resource type="Curve" id="Curve_lx6r1"]
_data = [Vector2(0, 0.00457156), 0.0, 0.047775, 0, 0, Vector2(1, 1), 3.136, 0.0, 0, 0]
point_count = 2

[sub_resource type="CircleShape2D" id="CircleShape2D_v4ga6"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_abifq"]
radius = 5.0

[node name="ItemBase" type="Node2D"]
z_index = 4
script = ExtResource("1_tigte")
trave_smooth_curve = SubResource("Curve_lx6r1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_2tuym")
region_enabled = true
region_rect = Rect2(119, 153, 16, 16)

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("CircleShape2D_v4ga6")

[node name="UseArea" type="Area2D" parent="."]
collision_layer = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="UseArea"]
shape = SubResource("CircleShape2D_abifq")
debug_color = Color(0.664095, 0.511603, 0.0707038, 0.42)

[connection signal="body_entered" from="CollectArea" to="." method="_on_collect_area_body_entered"]
[connection signal="body_entered" from="UseArea" to="." method="_on_use_area_body_entered"]
